Add portfolio and services sections

--- a/index.html
+++ b/index.html
@@ -45,7 +45,80 @@
         </div>
     </section>
 
-   
+    <section class="services">
+        <div class="container">
+            <h1>Services</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img src="images/1-1.png" alt="e-commerce">
+                    <h4>E-commerce</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img src="images/1-2.png" alt="responsive web">
+                    <h4>Responsive Web</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim </p>
+                </div>
+                <div class="col-12 col-md-12 col-lg-4">
+                    <img src="images/1-3.png" alt="web security">
+                    <h4>Web security</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <h1>Our portfolio</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4 portfolio-item">
+                    <img src="images/2-1.jpg" alt="ebony">
+                    <div class="caption">
+                        <h4>Ebony and ivory</h4>
+                        <p>Branding</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 portfolio-item">
+                    <img src="images/2-2.jpg" alt="ebony">
+                    <div class="caption">
+                        <h4>Smart stationery</h4>
+                        <p>Print design</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 portfolio-item">
+                    <img src="images/2-3.jpg" alt="ebony">
+                    <div class="caption">
+                        <h4>Clever poster</h4>
+                        <p>Print design</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 portfolio-item">
+                    <img src="images/2-4.jpg" alt="ebony">
+                    <div class="caption">
+                        <h4>Vinyl record</h4>
+                        <p>Product mockup</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 portfolio-item">
+                    <img src="images/2-5.jpg" alt="ebony">
+                    <div class="caption">
+                        <h4>Treehouse template</h4>
+                        <p>Web design</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 portfolio-item">
+                    <img src="images/2-6.jpg" alt="ebony">
+                    <div class="caption">
+                        <h4>Burned logo</h4>
+                        <p>Branding</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
   </body>
 </html>
