--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,500&family=Roboto+Slab&display=swap" rel="stylesheet">
-
+       <script src="https://kit.fontawesome.com/4c91f66995.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="vendor/bootstrap-grid.css">
       <link rel="stylesheet" href="css/style.css">
   </head>
@@ -15,7 +15,7 @@
 
     <header class="header">
         <div class="container">
-            <div class="row">
+            <div class="row align-items">
                 <div class="col-4">
                     <img src="images/logo.png" alt="logo" class="logo">
                 </div>
@@ -119,6 +119,22 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="row align-items">
+                <div class="col-12 col-lg-4">© Copyright 2014 FreebiesXpress.com</div>
+                <div class="col-12 col-lg-8">
+                    <ul>
+                        <li><a href="#"><span class="hidden">Twitter</span><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><span class="hidden">Twitter</span><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#"><span class="hidden">Twitter</span><i class="fa-brands fa-pinterest-p"></i></a></li>
+                        <li><a href="#"><span class="hidden">Twitter</span><i class="fa-brands fa-google-plus-g"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
   </body>
 </html>
