--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="header">
         <div class="container">
             <div class="row align-items">
-                <div class="col-4">
+                <div class="col-12 col-md-2 col-lg-4 item">
                     <img src="images/logo.png" alt="logo" class="logo">
                 </div>
-                <nav class="menu col-8">
+                <nav class="menu col-12 col-md-10 col-lg-8 item">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Services</a></li>
@@ -123,8 +123,8 @@
     <footer>
         <div class="container">
             <div class="row align-items">
-                <div class="col-12 col-lg-4">© Copyright 2014 FreebiesXpress.com</div>
-                <div class="col-12 col-lg-8">
+                <div class="col-12 col-lg-4 item">© Copyright 2014 FreebiesXpress.com</div>
+                <div class="col-12 col-lg-8 item">
                     <ul>
                         <li><a href="#"><span class="hidden">Twitter</span><i class="fa-brands fa-twitter"></i></a></li>
                         <li><a href="#"><span class="hidden">Twitter</span><i class="fa-brands fa-facebook-f"></i></a></li>
